<resources>
    <string name="app_name">Flashcards</string>
    <string name="add">Add</string>
    <string name="textview">TextView</string>

    /* My Decks */
    <string name="delete_deck">Delete deck</string>
    <string name="edit_deck">Edit deck</string>
    <string name="addDeck">Add Deck</string>
    <string name="myDecks">My Decks</string>

    /* Deck View */
    <string name="add_card">Add</string>
    <string name="deleteText">This action cannot be undone. Do you wish to permanently delete these cards?</string>
    <string name="delete_cards">Delete Cards</string>
    <string name="ignoreText">IGNORED</string>
    <string name="selectText">SELECTED</string>
    <string name="edit">Edit</string>
    <string name="shuffle">Shuffle</string>
    <string name="go_back">Go Back</string>
    <string name="test_deck">Deck Name</string>
    <string name="testText">Test Text</string>
    <string name="new_question">Question</string>
    <string name="new_answer">Answer</string>

    <string name="enter_question">Enter question here</string>
    <string name="enter_answer">Enter answer here</string>
    <string name="my_image_description">Image description</string>


    <string name="card_fragment">Question</string>
    <string name="sign_up">CREATE ACCOUNT</string>
    <string name="sign_in">SIGN IN</string>
    <string name="logout">LOG OUT</string>
    <string name="email_hint">Type in Email address</string>
    <string name="password_hint">Type in password</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="already_registered_button">Already registered? Sign in here!</string>
    <string name="not_registered_button">Not registered? Sign up here!</string>
    <string name="previous_card_button">Previous Card Button</string>
    <string name="next_card_button">Next Card Button</string>
    <string name="flip_card_button">Flip Card Button</string>
    <string name="background_icon">Background Icon</string>
    <string name="hamburger_menu">Hamburger Menu</string>
    <string name="tts_button">Text-To-Speech Button</string>
    <string name="ignore_cards">Ignore Cards</string>
</resources>