<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">

    <TextView
        android:id="@+id/deckName"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/test_deck"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/card_view"
        android:layout_width="367dp"
        android:layout_height="488dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="54dp"
        android:layout_height="62dp"
        android:contentDescription="@string/go_back"
        android:insetRight="0dp"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deckName"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cardHamburgerButton"
        android:layout_width="54dp"
        android:layout_height="62dp"
        android:contentDescription="@string/go_back"
        android:insetRight="0dp"
        app:icon="?attr/actionModeCloseDrawable"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/card_view"
        app:layout_constraintEnd_toStartOf="@+id/deckName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/flipCardButton"
        android:layout_width="82dp"
        android:layout_height="85dp"
        android:contentDescription="@string/add_card"
        app:icon="@drawable/ic_launcher_foreground"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view" />

    <Button
        android:id="@+id/previousCardButton"
        android:layout_width="63dp"
        android:layout_height="68dp"
        android:contentDescription="@string/shuffle"
        app:icon="?attr/actionModeCloseDrawable"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/flipCardButton"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view" />

    <Button
        android:id="@+id/nextCardButton"
        android:layout_width="63dp"
        android:layout_height="68dp"
        android:contentDescription="@string/edit"
        app:icon="@drawable/ic_launcher_foreground"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/flipCardButton"
        app:layout_constraintTop_toBottomOf="@+id/card_view" />
</androidx.constraintlayout.widget.ConstraintLayout>