<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeckFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/editModeButton"
            android:layout_width="63dp"
            android:layout_height="68dp"
            android:layout_marginStart="28dp"
            android:contentDescription="@string/edit"
            app:icon="@drawable/ic_baseline_edit_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="35dp"
            app:layout_constraintBottom_toBottomOf="@+id/addCardButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.107"
            app:layout_constraintStart_toEndOf="@+id/addCardButton"
            app:layout_constraintTop_toTopOf="@+id/addCardButton"
            app:layout_constraintVertical_bias="0.647" />

        <Button
            android:id="@+id/shuffleButton"
            android:layout_width="63dp"
            android:layout_height="68dp"
            android:layout_marginEnd="28dp"
            android:contentDescription="@string/shuffle"
            app:icon="@drawable/ic_baseline_shuffle_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="35dp"
            app:layout_constraintBottom_toBottomOf="@+id/addCardButton"
            app:layout_constraintEnd_toStartOf="@+id/addCardButton"
            app:layout_constraintHorizontal_bias="0.859"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addCardButton"
            app:layout_constraintVertical_bias="0.647" />

        <Button
            android:id="@+id/addCardButton"
            android:layout_width="82dp"
            android:layout_height="85dp"
            android:contentDescription="@string/add_card"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CardsRecyclerView"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/CardsRecyclerView"
            android:layout_width="360dp"
            android:layout_height="564dp"
            app:layout_constraintBottom_toTopOf="@+id/addCardButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>