<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/flipCardButton"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/flip_card_button"
            app:icon="@drawable/ic_baseline_refresh_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/previousCardButton"
            android:layout_width="60dp"
            android:layout_height="68dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/previous_card_button"
            app:icon="?attr/actionModeCloseDrawable"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="35dp"
            app:layout_constraintBottom_toBottomOf="@+id/flipCardButton"
            app:layout_constraintEnd_toStartOf="@+id/flipCardButton"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/flipCardButton" />

        <Button
            android:id="@+id/nextCardButton"
            android:layout_width="60dp"
            android:layout_height="68dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/next_card_button"
            app:icon="@drawable/ic_baseline_arrow_forward_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="35dp"
            app:layout_constraintBottom_toBottomOf="@+id/flipCardButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/flipCardButton"
            app:layout_constraintTop_toTopOf="@+id/flipCardButton" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_answer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="@color/md_theme_light_primaryContainer"
            app:layout_constraintBottom_toTopOf="@+id/flipCardButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="100dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/cardHamburgerMenuAnswer"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:alpha=".75"
                        android:src="@drawable/ic_baseline_more_vert_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        android:contentDescription="@string/hamburger_menu" />

                    <ImageView
                        android:id="@+id/cardBackgroundImageViewAnswer"
                        android:layout_width="360dp"
                        android:layout_height="460dp"
                        android:alpha=".07"
                        android:src="@drawable/ic_exclamation_mark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_exclamation_mark"
                        android:contentDescription="@string/background_icon" />

                    <TextView
                        android:id="@+id/cardTextViewAnswer"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:autoSizeMaxTextSize="60sp"
                        android:autoSizeMinTextSize="6sp"
                        android:autoSizeStepGranularity="2sp"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0"
                        tools:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        tools:textLocale="center" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/ttsButtonAnswer"
                    android:layout_width="60dp"
                    android:layout_height="68dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/tts_button"
                    app:icon="@drawable/ic_baseline_volume_up_24"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="DuplicateClickableBoundsCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_question"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="@color/md_theme_light_primaryContainer"
            app:layout_constraintBottom_toTopOf="@+id/flipCardButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="100dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/cardHamburgerMenuQuestion"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:alpha=".75"
                        android:src="@drawable/ic_baseline_more_vert_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        android:contentDescription="@string/hamburger_menu" />

                    <ImageView
                        android:id="@+id/cardBackgroundImageViewQuestion"
                        android:layout_width="360dp"
                        android:layout_height="460dp"
                        android:alpha=".07"
                        android:src="@drawable/ic_question_mark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_question_mark"
                        android:contentDescription="@string/background_icon" />

                    <TextView
                        android:id="@+id/cardTextViewQuestion"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:autoSizeMaxTextSize="60sp"
                        android:autoSizeMinTextSize="6sp"
                        android:autoSizeStepGranularity="2sp"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0"
                        tools:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        tools:textLocale="center" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/ttsButtonQuestion"
                    android:layout_width="60dp"
                    android:layout_height="68dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/tts_button"
                    app:icon="@drawable/ic_baseline_volume_up_24"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>